--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,37 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<!DOCTYPE>
+<html lang="fr-FR">
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Bienvenue au Quai Antique !
+			{% endblock %}
+		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
+		<link rel="icon" href="assets/images/logo.png">
+		<meta viewport="width=device-width, initial-scale=1.0">
+		<meta description="Venez au Quai Antique vivre une expérience gastronomique sans artifices. Vous y trouverez des plats confectionnés avec des produits locaux et avec passion !">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Frank+Ruhl+Libre:wght@300;500;700&display=swap" rel="stylesheet">
+
+		{% endblock %}
+	</head>
+	<body>
+		{% block header %}
+			{% include "_partials/_header.html.twig" %}
+		{% endblock %}
+
+		{% block body %}{% endblock %}
+
+		{% block footer %}
+			{% include "_partials/_footer.html.twig" %}
+		{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</body>
 </html>
