--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<img class="footer__logo" src="assets/images/logo.png" alt="Logo de Nutrisain.">
+	<img class="footer__logo" src="{{asset('build/images/logo.png')}}" alt="Logo de Nutrisain.">
 	<div class="">
 		<div class="footer__container">
 			<section class="footer__contact">
