--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__container">
 		<div class="flex">
-			<img class="header__container--logo" src="assets/images/logo.png" alt="Logo de Nutrisain.">
+			<img class="header__container--logo" src="{{asset('build/images/logo.png')}}" alt="Logo de Nutrisain.">
 			<button class="header__container--btn">
 				<i class="fas fa-bars"></i>
 			</button>
