--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% endblock %}
 		</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
-		<link rel="icon" href="assets/images/logo.png">
+		<link rel="icon" href="{{asset('build/images/logo.png')}}">
 		<meta viewport="width=device-width, initial-scale=1.0">
 		<meta description="Venez au Quai Antique vivre une expérience gastronomique sans artifices. Vous y trouverez des plats confectionnés avec des produits locaux et avec passion !">
 
