--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -28,7 +28,7 @@
     <p class="famous-dishes__text-presentation">Voici quelques-uns de nos plats phares qui pourraient bien vous donner l'eau à la bouche !</p>
     <div class="raclette-card">
         <div class="raclette-card__view">
-            <img class="raclette-card__view--image" src="assets/images/plats/raclette_2_personnes.jpeg" alt="Raclette pour deux personnes.">
+            <img class="raclette-card__view--image" src="{{asset('build/images/plats/raclette_2_personnes.jpeg')}}" alt="Raclette pour deux personnes.">
         </div>
         <div class="raclette-card__description">
             <h3 class="raclette-card__description--title">La raclette.</h3>
@@ -47,12 +47,12 @@
             </p>
         </div>
         <div class="reblochon-card__view">
-            <img class="reblochon-card__view--image" src="assets/images/plats/fondue_reblochon.jpeg" alt="Fondue de reblochon.">
+            <img class="reblochon-card__view--image" src="{{asset('build/images/plats/fondue_reblochon.jpeg')}}" alt="Fondue de reblochon.">
         </div>
     </div>
     <div class="tartiflette-card">
         <div class="tartiflette-card__view">
-            <img class="tartiflette-card__view--image" src="assets/images/plats/tartiflette.jpeg" alt="Tartiflette faite maison.">
+            <img class="tartiflette-card__view--image" src="{{asset('build/images/plats/tartiflette.jpeg')}}" alt="Tartiflette faite maison.">
         </div>
         <div class="tartiflette-card__description">
             <h3 class="tartiflette-card__description--title">La tartiflette.</h3>
@@ -71,7 +71,7 @@
             </p>
         </div>
         <div class="cammenbert-card__view">
-            <img class="cammenbert-card__view--image" src="assets/images/plats/cammenbert_fondu.jpeg" alt="Cammenbert fondu dans sa croûte de pain.">
+            <img class="cammenbert-card__view--image" src="{{asset('build/images/plats/cammenbert_fondu.jpeg')}}" alt="Cammenbert fondu dans sa croûte de pain.">
         </div>
     </div>
 
