--- a/assets/styles/sass/atoms/_button.sass
+++ b/assets/styles/sass/atoms/_button.sass
@@ -2,9 +2,9 @@
 
 .btn
     border-radius: 1.5rem
-    padding: 0.5rem 1.5rem
     font-weight: 500
     transition: 0.5s ease-in
+    margin: 0.7vw
 
     &__primary
         background-color: utils.$gold
