--- a/assets/styles/sass/components/_footer.sass
+++ b/assets/styles/sass/components/_footer.sass
@@ -1,8 +1,9 @@
 @use "../utils/_main" as utils
 
 .footer
-    background-color: utils.$gold
-    color: utils.$black
+    color: utils.$yellow-metal
+    border-top: solid
+    border-color: utils.$yellow-metal
     display: flex
     align-items: center
     justify-content: space-evenly
