--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <button class="btn btn__primary">Réserver une table</button>
+    <a class="btn-reservation">Réserver une table</a>
 </section>
 
 {% endblock %}
