--- a/assets/styles/sass/components/_header.sass
+++ b/assets/styles/sass/components/_header.sass
@@ -67,3 +67,17 @@
         display: block
         color: utils.$yellow-metal
         font-size: 1.5rem
+
+.btn
+    border-radius: 1.5rem
+    font-weight: 500
+    transition: 0.5s ease-in
+    margin: 0.7vw
+
+    &__primary
+        background-color: utils.$gold
+        color: utils.$black
+
+        &:hover
+            background-color: utils.$brown
+            color: utils.$gold
