--- a/assets/styles/sass/components/_header.sass
+++ b/assets/styles/sass/components/_header.sass
@@ -40,7 +40,7 @@
         margin: 0.8rem
         color: utils.$gold
         text-align: center
-        @extend %paragraphe-l
+        @extend %paragraphe-s
         transition: color .5s ease
         +utils.responsive("tablet")
             margin: 0.07rem
