--- a/assets/styles/sass/components/_home-cover.sass
+++ b/assets/styles/sass/components/_home-cover.sass
@@ -38,6 +38,7 @@
 
     &__text-presentation
         @extend %paragraphe-m
+        text-align: center
         color: utils.$yellow-metal
 
 .raclette-card
@@ -169,7 +170,7 @@
     border-radius: 1.5rem
     font-weight: 500
     transition: 0.5s ease-in
-    margin: 5vw
+    margin-top: 5vw
     padding: 1vw
     background-color: utils.$gold
     color: utils.$black
