--- a/assets/styles/sass/style.sass
+++ b/assets/styles/sass/style.sass
@@ -7,6 +7,7 @@
 @use "components/_header"
 @use "components/_footer"
 @use "components/_home-cover"
+@use "components/_menus"
 
 // Atoms
 @use "atoms/_button"
