--- a/assets/styles/sass/utils/_typos.sass
+++ b/assets/styles/sass/utils/_typos.sass
@@ -7,20 +7,28 @@
 
 %title-2
     font-family: font.$font-title
-    font-size: 2rem
+    font-size: 2.3rem
 
 %title-3
     font-family: font.$font-title
-    font-size: 1.2rem
+    font-size: 1.7rem
 
-%paragraphe-s
-    font-family: font.$font-text
-    font-size: 0.75rem
-
-%paragraphe-m
-    font-family: font.$font-text
-    font-size: 1rem
+%title-4
+    font-family: font.$font-title
+    font-size: 1.3rem
 
 %paragraphe-l
     font-family: font.$font-text
+    font-size: 2rem
+
+%paragraphe-m
+    font-family: font.$font-text
+    font-size: 1.7rem
+
+%paragraphe-s
+    font-family: font.$font-text
     font-size: 1.3rem
+
+%paragraphe-xs
+    font-family: font.$font-text
+    font-size: 0.75rem
