--- a/templates/pages/menus.html.twig
+++ b/templates/pages/menus.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Le Quai Antique - Menus{% endblock %}
 
 {% block body %}
-<section class="header">
-	<h1 class="header__title">Nos Menus</h1>
-	<p class="header__description">Nous avons 3 menus disponibles :
-		<a class="header__description--link">la formule du midi</a>,
-		<a class="header__description--link">le Duo</a>, et
-		<a class="header__description--link">les Gourmands</a>.</p>
-        <p class="header__description">Tous nos plats sont fait maison avec des produits de qualité et locaux.</p>
+<section class="main">
+	<h1 class="main__title">Nos Menus</h1>
+	<p class="main__description">Nous avons 3 menus disponibles :
+		<a class="main__description--link">la formule du midi</a>,
+		<a class="main__description--link">le Duo</a>, et
+		<a class="main__description--link">les Gourmands</a>.</p>
+        <p class="main__description">Tous nos plats sont fait maison avec des produits de qualité et locaux.</p>
 </section>
 
 <section class="lunch-menu">
