Dishes page styled.

--- a/assets/styles/sass/style.sass
+++ b/assets/styles/sass/style.sass
@@ -8,6 +8,7 @@
 @use "components/_footer"
 @use "components/_home-cover"
 @use "components/_menus"
+@use "components/_dishes"
 
 // Atoms
 @use "atoms/_button"
