--- a/assets/styles/sass/components/_dishes.sass
+++ b/assets/styles/sass/components/_dishes.sass
@@ -1,612 +1,879 @@
-.main-dishes
+@use "../utils/_main" as utils
 
+.main-dishes
+    text-align: center
+    margin-top: 10vw
 
     &__title
+        @extend %title-1
 
 
     &__description
-
+        @extend %paragraphe-l
+        margin-top: 5vw
 
 .starter-dishes
-
+    text-align: center
+    margin-top: 10vw
 
     &__title
-
+        @extend %title-2
+        text-decoration: underline
+        text-underline-offset: 0.5vw
 
     &__list
-
+        margin-top: 5vw
 
 .bruschetta
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .lettuce
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
+        width: 30vw
 
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .quinoa
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .goat-cheese-salad
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .pasta-salad
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .main-courses-dishes
-
+    text-align: center
+    margin-top: 10vw
 
     &__title
-
+        @extend %title-2
 
     &__list
+        margin-top: 5vw
 
 
 .berthoud
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .camembert
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .croziflette
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .reblochon-cheese-fondue
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .three-cheese-fondue
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .meat-fondue
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .charcuterie-platter
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .raclette-for-two
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .raclette-for-many
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .reblochon-tart
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .tartiflette
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .burgers-dishes
-
+    text-align: center
+    margin-top: 10vw
 
     &__title
-
+        @extend %title-2
+        text-decoration: underline
+        text-underline-offset: 0.5vw
 
     &__list
-
+        margin-top: 5vw
 
 .double-cheddar-burger
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .double-cheese-burger
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .meat-burger
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .black-bread-burger
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .reblochon-burger
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .vegetarians-dishes
-
+    text-align: center
+    margin-top: 10vw
 
     &__title
-
+        @extend %title-2
+        text-decoration: underline
+        text-underline-offset: 0.5vw
 
     &__list
-
+        margin-top: 5vw
 
 .rice-vegetables
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .vegetables-soups
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .vegetables-tower
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .potatoes-garlic-soups
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .desserts-dishes
-
+    text-align: center
+    margin-top: 10vw
 
     &__title
-
+        @extend %title-2
+        text-decoration: underline
+        text-underline-offset: 0.5vw
 
     &__list
-
+        margin-top: 10vw
 
 .gourmet-coffee
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .cheesecake
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .chocolate-ice-cream
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .chocolate-caramel-cake
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .chocolate-marshmallows-cake
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
 
 .cream-cake
-
+    margin-top: 5vw
+    +utils.responsive(tablet)
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
 
     &__image
-
+        width: 30vw
 
     &__description
-
+        margin-top: 5vw
 
         &--title
-
+            @extend %title-3
 
         &--details
-
+            @extend %paragraphe-s
 
     &__price
-
-
+        @extend %paragraphe-s
+        color: utils.$brown
+        +utils.responsive(tablet)
+            width: 10vw
