--- a/templates/pages/dishes.html.twig
+++ b/templates/pages/dishes.html.twig
@@ -78,7 +78,7 @@
             <img class="croziflette__image" src="{{asset('build/images/main_courses/croziflette.jpeg')}}" alt="Croziflette.">
             <div class="croziflette__description">
                 <p class="croziflette__description--title">Croziflette.</p>
-                <p class="croziflette__description--details">()</p>
+                <p class="croziflette__description--details">(Crozets, lardons, crème, reblochon, oignons.)</p>
             </div>
             <p class="croziflette__price">18€</p>
         </li>
@@ -86,7 +86,7 @@
             <img class="reblochon-cheese-fondue__image" src="{{asset('build/images/main_courses/reblochon_cheese_fondue.jpeg')}}" alt="Fondue de reblochon.">
             <div class="reblochon-cheese-fondu__description">
                 <p class="reblochon-cheese-fondue__description--title">Fondue de reblochon.</p>
-                <p class="reblochon-cheese-fondue__description--details">(Crozets, lardons, crème, reblochon, oignons.)</p>
+                <p class="reblochon-cheese-fondue__description--details">(Reblochon, pain, accompagnée d'une salade verte.)</p>
             </div>
             <p class="reblochon-cheese-fondue__price">28€</p>
         </li>
@@ -115,7 +115,7 @@
             <p class="charcuterie-platter__price">15€</p>
         </li>
         <li class="raclette-for-two">
-            <img class="raclette-for-two__image" src="{{asset('build/images/main_courses/reclette_for_two.jpeg')}}" alt="Raclette pour deux personnes.">
+            <img class="raclette-for-two__image" src="{{asset('build/images/main_courses/raclette_for_two.jpeg')}}" alt="Raclette pour deux personnes.">
             <div class="raclette-for-two__description">
                 <p class="raclette-for-two__description--title">Raclette pour deux personnes.</p>
                 <p class="raclette-for-two__description--details">(Reblochon, pommes de terres, bacon, salade.)</p>
@@ -210,7 +210,7 @@
             <img class="vegetables-soups__image" src="{{asset('build/images/vegetarians_dishes/vegetables_soups.jpg')}}" alt="Potage de pomme de terres et ses légumes.">
             <div class="vegetables-soups__description">
                 <p class="vegetables-soups__description--title">Potage de pommes de terres et ses légumes.</p>
-                <p class="vegetables-soups__description--details">()</p>
+                <p class="vegetables-soups__description--details">(Pommes de terres, crème, haricots rouge, carottes, oignons, coriandre.)</p>
             </div>
             <p class="vegetables-soups__price">18€</p>
         </li>
@@ -218,7 +218,7 @@
             <img class="vegetables-tower__image" src="{{asset('build/images/vegetarians_dishes/vegetables_tower.jpg')}}" alt="Tour de légumes de saison.">
             <div class="vegetables-tower__description">
                 <p class="vegetables-tower__description--title">Tour de légumes de saison.</p>
-                <p class="vegetables-tower__description--details">(Pommes de terres, crème, haricots rouge, carottes, oignons, coriandre.)</p>
+                <p class="vegetables-tower__description--details">(Assortiments de poivrons, navet.)</p>
             </div>
             <p class="vegetables-tower__price">21€</p>
         </li>
@@ -269,7 +269,7 @@
             <p class="chocolate-caramel-cake__price">8€</p>
         </li>
         <li class="chocolate-marshmallows-cake">
-            <img class="chocolate-marshmallows-cake__image" src="{{asset('build/images/desserts/chocolate_caramel_cake.jpg')}}" alt="Gâteau au chocolat et guimauves.">
+            <img class="chocolate-marshmallows-cake__image" src="{{asset('build/images/desserts/chocolate_marshmallows_cake.jpg')}}" alt="Gâteau au chocolat et guimauves.">
             <div class="chocolate-marshmallows-cake__description">
                 <p class="chocolate-marshmallows-cake__description--title">Gâteau au chocolat et guimauves.</p>
                 <p class="chocolate-marshmallows-cake__description--details">(chocolat, crème, guimauves.)</p>
